--- a/docs/api/client.mdx
+++ b/docs/api/client.mdx
@@ -368,6 +368,8 @@ Pause all playing sounds and music
 ### nil ResumeAudio() {#nil-ResumeAudio}
 Resume all paused sounds and music
 
+### nil StopAudio() {#nil-StopAudio}
+
 ## Properties
 
 ### integer clientID {#integer-clientID}
@@ -384,9 +386,12 @@ Resume all paused sounds and music
 
 ### string sysInfo {#string-sysInfo}
 
-### number AudioVolume {#number-AudioVolume}
+### number MasterVolume {#number-MasterVolume}
 Audio volume in range 0 - 1.
+
 ### number SoundVolume {#number-SoundVolume}
+Audio volume in range 0 - 1.
 
 ### number MusicVolume {#number-MusicVolume}
+Audio volume in range 0 - 1.
 
