--- a/docs/api/material.mdx
+++ b/docs/api/material.mdx
@@ -21,3 +21,7 @@ id: Material
 
 ### nil SetProperty(Material, string, Vec4) {#nil-SetProperty-Material-string-Vec4}
 
+## Properties
+
+### Effect Effect {#Effect-Effect}
+
