--- a/docs/api/script.mdx
+++ b/docs/api/script.mdx
@@ -37,8 +37,6 @@ Script component. Not to be confused with the actual [lua table instance](Script
 
 ### string name {#string-name}
 
-### string file {#string-file}
-
 ### boolean syncToClients {#boolean-syncToClients}
 
 ### table Instance {#table-Instance}
@@ -48,4 +46,6 @@ Script component. Not to be confused with the actual [lua table instance](Script
 ### string File {#string-File}
 
 ### boolean SyncToClients {#boolean-SyncToClients}
+
+### Asset LuaFile {#Asset-LuaFile}
 
