--- a/docs/api/server.mdx
+++ b/docs/api/server.mdx
@@ -27,7 +27,7 @@ This class is only available on server
 
 ### nil ResendScripts() {#nil-ResendScripts}
 
-### table, table GetLuaFilesList() {#table-table-GetLuaFilesList}
+### table GetLuaFilesList() {#table-GetLuaFilesList}
 
 ### table, table GetVoxelFilesList() {#table-table-GetVoxelFilesList}
 Voxel files in the Montage/Voxels, those you saved in your montage and they are not necessary uploaded to the cloud already. local montage assets
@@ -54,10 +54,6 @@ Common scenes
 ### nil SaveScene() {#nil-SaveScene}
 
 ### nil SaveSceneHierarchy() {#nil-SaveSceneHierarchy}
-
-### nil SetBackupSceneOnSave(boolean) {#nil-SetBackupSceneOnSave-boolean}
-
-### boolean GetBackupSceneOnSave() {#boolean-GetBackupSceneOnSave}
 
 ### nil ReloadScene() {#nil-ReloadScene}
 
@@ -106,8 +102,6 @@ Common scenes
 ### boolean MoveFileToMontageVoxelsFolder(File, string) {#boolean-MoveFileToMontageVoxelsFolder-File-string}
 
 ### nil MakeUrlForFile(File, userdata, userdata) {#nil-MakeUrlForFile-File-userdata-userdata}
-
-### AssetManager GetResourceManScene() {#AssetManager-GetResourceManScene}
 
 ### number GetLogTime(string) {#number-GetLogTime-string}
 
@@ -170,4 +164,6 @@ Common scenes
 ### boolean EditMode {#boolean-EditMode}
 
 ### boolean ModeChangeReloadGeom {#boolean-ModeChangeReloadGeom}
+
+### AssetManager Assets {#AssetManager-Assets}
 
