--- a/docs/api/shape.mdx
+++ b/docs/api/shape.mdx
@@ -13,6 +13,7 @@ All shapes inherit from this class. It is not meant to be instantiated directly.
 * [Capsule](Capsule)
 * [Cylinder](Cylinder)
 * [Polygon](Polygon)
+* [Polyhedron](Polyhedron)
 
 ## Properties
 
