--- a/docs/api/voxelDataResource.mdx
+++ b/docs/api/voxelDataResource.mdx
@@ -46,3 +46,7 @@ Approximate. Quickly count non-zero blocks of voxel object. Block size is 8x8x8.
 
 ### number scaleToStatic {#number-scaleToStatic}
 
+### number loadLodScale {#number-loadLodScale}
+
+### number voxelSize {#number-voxelSize}
+
