--- a/docs/api/voxelEdit.mdx
+++ b/docs/api/voxelEdit.mdx
@@ -137,7 +137,7 @@ parameters specify "cone" - two positions and end radius
 
 ### nil SetMaterial(string, table) {#nil-SetMaterial-string-table}
 
-### nil SetStaticSceneMaterial(string) {#nil-SetStaticSceneMaterial-string}
+### nil SetStaticSceneMaterial(string, number, number) {#nil-SetStaticSceneMaterial-string-number-number}
 
 ### nil SetVoxelDataResourceMaterial(VoxelDataResource, string) {#nil-SetVoxelDataResourceMaterial-VoxelDataResource-string}
 
