--- a/docs/api/scene.mdx
+++ b/docs/api/scene.mdx
@@ -52,6 +52,7 @@ local ob = Scene:CreateObject("Player Controller 1")
 Also see [`Scene:MakeNameValid`](#string-MakeNameValid-string)
 
 ### nil DestroyObject(Object) {#nil-DestroyObject-Object}
+Flags the object for deletion. The object will not actually be destroyed until the next frame.
 
 ### table GetObjectsByName(string) {#table-GetObjectsByName-string}
 
