--- a/docs/manual/10-getting-started/29-shortcuts.mdx
+++ b/docs/manual/10-getting-started/29-shortcuts.mdx
@@ -18,6 +18,7 @@
 ## Camera
 
 * `Shift` Move faster
+* `Alt` Move slower
 * `Q`/`E` Move camera on alternative axis
 * `Middle Mouse Button` Focus the camera on the clicked point
 
