Initial Overhaul to Docs
TL;DR ----------------------------------------------------------
Reformatted footer to fit theme, and be a bit cleaner. Changed layout of hierarchy to have a more distinct pattern. Header > Getting Started > Categories. Changed landing page image. Removed scripting signup, informed of access via client. Corrected typos and puncuation errors. Fixed formatting of some pages to follow same casing structure `lower-case.mdx`. Updated shortcuts to reflect current build, and added ones not there. Added documentation for the maker upload portal to reflect what is shown in the portal when pressing the question mark. API section untouched, and most of scripting section untouched. Main revisions live in Editor section, and new home landing page. Youtube links overhauled and css theme revised.

REVISIONS ----------------------------------------------------------
☑ Entire Docs Page Should be reformatted into:
Home
Editor
- Getting Started
- Basics
- - Camera
- - Hierarchy
- - Shortcuts
- - Voxels
- Importing
- - Maker Portal Uploads
- - Image Stack Voxelizer
- - Importing Meshes
- Framerate Tips
Scripting
- Getting Started
- Rest Unchanged...

☑ Redesign footer

☑ Update landing page banner to picture from game, or official banner image
- updated to image from in-engine for now
- updated image to have blur with atomontage logo overlayed
- reduced file size by 30%

☑ Move scripting early access signup from Editor section to Scripting section and wrap in button
- removed scripting early access reference, instead guide to download client instead, also added references to video tutorials for this

☑ Spellcheck

☑ Add Makers Portal Upload Help
- Also added font awesome as import to the `custom.css` file to enable style matching to the documentation on the maker portal

☑ Updated all Youtube iframes
- Now using standard and allow more features

☑ Added buttons for important features

--- a/docs/manual/10-editor/20-basics/40-shortcuts.mdx
+++ b/docs/manual/10-editor/20-basics/40-shortcuts.mdx
@@ -5,7 +5,10 @@
 * `Ctrl + Z` Undo (limited to some actions)
 * `Ctrl + Y` Redo
 * `Ctrl + R` Reset lua state
-* `Ctrl + K` See list of quick actions
+* `Ctrl + K` Open Lua console
+* `Ctrl + L` Open Lua window
+* `Ctrl + H` Hierarchy Server
+* `Ctrl + G` Hierarchy Client 
 
 ## Hierarchy
 
