--- a/docs/manual/20-scripting/40-fps-demo.mdx
+++ b/docs/manual/20-scripting/40-fps-demo.mdx
@@ -20,7 +20,7 @@ It contains:
 
 ## Running the demo
 
-* In server hierachy locate the `FPS Game` prefab set the object active
+* In server hierarchy locate the `FPS Game` prefab set the object active
 * You should now be in first person mode, press `F2` to return to the editor
 * Find the `Spawn Points` object in the server hierarchy and position its child to adjust your spawn point
 * You can add multiple spawn points to randomize the spawn location
