--- a/docs/manual/20-scripting/examples/Voxel Worm.mdx
+++ b/docs/manual/20-scripting/examples/Voxel Worm.mdx
@@ -2,7 +2,14 @@
 
 A flying worm that draws a voxel trail behind it. The worm is controlled by a simple physics script that makes it move in a random direction and bounce off the ground.
 
-<iframe width="100%" height="500" src="https://www.youtube.com/embed/B7bFbBRM3IM?si=PujfCIhl8M_SMQnQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" fullscreen></iframe>
+<iframe
+  width="100%"
+  height="500"
+  src="https://www.youtube.com/embed/B7bFbBRM3IM?si=PujfCIhl8M_SMQnQ"
+  title="YouTube video player"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allowFullScreen
+></iframe>
 
 
 ```lua
