--- a/docs/manual/10-editor/80-framerate-tips.mdx
+++ b/docs/manual/10-editor/80-framerate-tips.mdx
@@ -1,12 +1,12 @@
 ---
 id: framerate-tips
-slug: /manual/framerate-tips
+slug: /manual/editor/framerate-tips
 ---
 
 
 # Framerate Tips
 
 * If you are using a laptop with both dedicated and integrated GPU disable the integrated gpu for your browser
-* In the future we will release a downloadable standalone client that will perform much better
+* Try running the editor in the downloadable client - [Download](https://www.atomontage.com/downloads/)
 * Contact us on discord for more help 
 
