--- a/docs/manual/10-editor/20-basics/20-camera.mdx
+++ b/docs/manual/10-editor/20-basics/20-camera.mdx
@@ -9,3 +9,24 @@ Use the mouse buttons, mouse wheel and `WASD` to control the camera. Press `Shif
 The tools panel has a `Reset Position` button to reset the camera. 
 Press `Middle Mouse Button` to focus the camera on the clicked point.
 Press `F` to focus the camera on the selected object in the hierarchy.
+
+## Camera Settings
+### Quality
+- `Quality Predef` - Sets the predefined level for the quality settings.
+- `Detail Level` - Sets the rendering detail of the voxels in the scene.
+
+### View
+- `Field of View` - Adjusts the camera's field of view.
+
+### Movement
+- `Move Speed` - Adjusts the camera movement speed.
+- `Orbit Speed` - Rotates around the `X` or `Y` axis at the set speed.
+- `Reset Camera` - Resets the camera to its default position and orientation.
+- `Auto Speed` - Automatic camera speed slowdown when closer to objects.
+- `Invert Mouse` - Inverts the mouse in the camera controller.
+- `Cinematic Mode` - Enables the camera to move smoothly in fly mode.
+
+## API
+:::note References
+[`Camera`](/api/Camera)
+:::
