--- a/docs/manual/10-editor/20-basics/60-voxels.mdx
+++ b/docs/manual/10-editor/20-basics/60-voxels.mdx
@@ -9,3 +9,18 @@ The `Paint` brush has various blend modes which you may know from Photoshop. See
 Save voxels edits of the terrain by pressing `Menu` in the top left and then `Save Voxel Data`.
 
 ![Save](/img/editor-basics/saveVoxels.png)
+
+## API
+:::note References
+[`Vox`](/manual/scripting/examples/Voxel-Edits)  
+[`StaticVoxelData`](/api/StaticVoxelData)  
+[`VoxelData`](/api/VoxelData)  
+[`VoxelDataResource`](/api/VoxelDataResource)  
+[`VoxelInspectData`](/api/VoxelInspectData)  
+[`VoxelRenderer`](/api/VoxelRenderer)  
+:::
+
+:::danger Deprecated
+[`VoxelDB`](/api/VoxelDB)  
+[`VoxelEdit`](/api/VoxelEdit)  
+:::
