--- a/docs/manual/20-scripting/01-getting-started.mdx
+++ b/docs/manual/20-scripting/01-getting-started.mdx
@@ -4,9 +4,11 @@ import Link from '@docusaurus/Link';
 
 **Scripting is only available in the native client.**
 
+Access the scripts folder by pressing `CTRL + L` to open the Lua menu. Then select the scripts folder button.
+
 ---
 
-Watch this video for an intro to scripting and the editor
+Watch this video for an intro to scripting and the native client editor.
 
 <iframe
   width="100%"
