--- a/docs/manual/20-scripting/40-fps-demo.mdx
+++ b/docs/manual/20-scripting/40-fps-demo.mdx
@@ -120,7 +120,7 @@ return self
 ## Adding a Voxel Scene
 
 You can add some voxel scenes such as the various Islands you will find in your assets. 
-You can also [voxelize your own](../getting-started/importing-meshes) or use the shape tools to build your own scene.
+You can also [voxelize your own](/manual/editor/importing/importing-meshes) or use the shape tools to build your own scene.
 
 * Use the `Add Asset` button to add a voxel scene
 * Disable `Copy on Write` to avoid the voxel scene loading on first edit, if you have the scene more than once edits will be shared however
